Date range filters

--- a/assets/unpublishedfilter.publish.css
+++ b/assets/unpublishedfilter.publish.css
@@ -1,10 +1,10 @@
 @font-face {
-	font-family: 'icons';
 	src: url('fonts/icons.eot?45544828');
 	src: url('fonts/icons.eot?45544828#iefix') format('embedded-opentype'),
-		 url('fonts/icons.woff?45544828') format('woff'),
-		 url('fonts/icons.ttf?45544828') format('truetype'),
-		 url('fonts/icons.svg?45544828#icons') format('svg');
+	     url('fonts/icons.woff?45544828') format('woff'),
+	     url('fonts/icons.ttf?45544828') format('truetype'),
+	     url('fonts/icons.svg?45544828#icons') format('svg');
+	font-family: 'icons';
 	font-weight: normal;
 	font-style: normal;
 }
@@ -16,17 +16,17 @@
 	color: rgba(0, 0, 0, 0.3) !important;
 }
 
-.unpublishedfilter-future a::before {
+.unpublishedfilter-future td:first-child a::before {
 	content: '\e80b';
+	padding-right: 0.5em;
+	color: #3f69a5;
 	font-family: icons;
 	font-size: 12px;
 	border-bottom: 1px solid #fff;
-	padding-right: 0.5em;
-	color: #3f69a5;
 }
 
 .unpublishedfilter-future:nth-child(odd) a::before {
-	border-bottom: 1px solid #f5f5f5;	
+	border-bottom: 1px solid #f5f5f5;
 }
 
 .unpublishedfilter-published {
