--- a/assets/unpublishedfilter.publish.css
+++ b/assets/unpublishedfilter.publish.css
@@ -13,20 +13,15 @@
 .unpublishedfilter-draft a,
 .unpublishedfilter-future,
 .unpublishedfilter-future a {
-	color: rgba(0, 0, 0, 0.3) !important;
+	color: #d3dce3!important;
 }
 
 .unpublishedfilter-future td:first-child a::before {
 	content: '\e80b';
-	padding-right: 0.5em;
-	color: #3f69a5;
+	color: #d3dce3;
 	font-family: icons;
 	font-size: 12px;
-	border-bottom: 1px solid #fff;
-}
-
-.unpublishedfilter-future:nth-child(odd) a::before {
-	border-bottom: 1px solid #f5f5f5;
+	padding-right: 0.5rem;
 }
 
 .unpublishedfilter-published {
